[metadata]
name = nagare-commands
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Multi-levels CLI commands
long_description = file: README.rst
license = BSD
keywords = ''
url = https://github.com/nagareproject/commands

[options]
zip_safe = False
packages = nagare
install_requires =
	nagare-services

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
