[metadata]
name = nagare-commands
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Multi-levels CLI commands
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/commands-app-create
    Tracker = https://github.com/nagareproject/commands-app-create/issues

[options]
zip_safe = False
packages = nagare
install_requires =
	nagare-services

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
